while/tests/invalid-parsing/Parsing_Invalid_7.while
// Valid in Whiley, not in While
type LinkedList is { int data, LinkedList next}